force-app/main/default/objects/AH_UDC_ConfigurationSetting__c/AH_UDC_ConfigurationSetting__c.object-meta.xml
<CustomObject>
    <description>This is a common object to store settings used by the application, allowing storage of both managed package and custom settings.</description>
    <label>UDC Configuration Setting</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Setting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UDC Configuration Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>