force-app/main/default/objects/AH_UDC_ConfigurationSetting__c/fields/AH_UDC__c.field-meta.xml
<CustomField>
    <fullName>AH_UDC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this setting required by any AH_UDC custom code in this Org</description>
    <inlineHelpText>Indicates if this setting required by any AH_UDC custom code in this Org</inlineHelpText>
    <label>AH_UDC</label>
    <type>Checkbox</type>
</CustomField>