force-app/main/default/objects/AH_UDC_ConfigurationSetting__c/fields/DisplayOrder__c.field-meta.xml
<CustomField>
    <fullName>DisplayOrder__c</fullName>
    <description>This is the order in which the setting will be displayed; entries with the same value will be sorted by name.</description>
    <inlineHelpText>This is the order in which the setting will be displayed; entries with the same value will be sorted by name.</inlineHelpText>
    <label>Display Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>