force-app/main/default/objects/AH_UDC_ConfigurationSetting__c/fields/OrgName__c.field-meta.xml
<CustomField>
    <fullName>OrgName__c</fullName>
    <description>This is the Name of the org for which these settings should be used; alternatively if no Org Name is specified it applies to all orgs.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This is the Name of the org for which these settings should be used; alternatively if no Org Name is specified it applies to all orgs.</inlineHelpText>
    <label>Org Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>