force-app/main/default/objects/AH_UDC_ConfigurationSetting__c/fields/PageGroupName__c.field-meta.xml
<CustomField>
    <fullName>PageGroupName__c</fullName>
    <description>This is the grouping at the page level of display.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This is the grouping at the page level of display.</inlineHelpText>
    <label>Page Group Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>