force-app/main/default/objects/AH_UDC_ConfigurationSetting__c/fields/PageName__c.field-meta.xml
<CustomField>
    <fullName>PageName__c</fullName>
    <description>This is the page onto which the settings should be grouped.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This is the page onto which the settings should be grouped.</inlineHelpText>
    <label>Page Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>