force-app/main/default/objects/AH_UDC_ConfigurationSetting__c/fields/PageSectionName__c.field-meta.xml
<CustomField>
    <fullName>PageSectionName__c</fullName>
    <description>This is the section header name on the page.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This is the section header name on the page.</inlineHelpText>
    <label>Page Section Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>