force-app/main/default/objects/AH_UDC_ConfigurationSetting__c/fields/SettingDisplayName__c.field-meta.xml
<CustomField>
    <fullName>SettingDisplayName__c</fullName>
    <description>This is the display name for the setting.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This is the display name for the setting.</inlineHelpText>
    <label>Setting Display Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>