force-app/main/default/objects/AH_UDC_ConfigurationSetting__c/fields/SettingHelpText__c.field-meta.xml
<CustomField>
    <fullName>SettingHelpText__c</fullName>
    <description>This is the help text that should be displayed to the user.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This is the help text that should be displayed to the user.</inlineHelpText>
    <label>Setting Help Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>