force-app/main/default/objects/AH_UDC_ConfigurationSetting__c/fields/SettingTextAreaValue__c.field-meta.xml
<CustomField>
    <fullName>SettingTextAreaValue__c</fullName>
    <description>This field will only contain data for configuration settings that have a SettingType__c  of &quot;TextArea&quot;</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Contains the setting value for configuration settings that are of SettingType__c = &apos;TextArea&apos;

Allows for large string values, and multi-line strings</inlineHelpText>
    <label>Setting TextArea Value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>