force-app/main/default/objects/AH_UDC_ConfigurationSetting__c/fields/SettingType__c.field-meta.xml
<CustomField>
    <fullName>SettingType__c</fullName>
    <description>Controls the data format, and the way the setting will appear in the editor.  All types except TextArea store values in the SettingValue__c field.  Settings of type TextArea store data in the SettingTextAreaValue__c field</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Controls the data format, and control used to display/edit the setting&apos;s value.  Valid Setting Types are:

String - Single line
TextArea - Multiline
Integer
Checkbox - Boolean
Picklist
URL

Page
Method</inlineHelpText>
    <label>Setting Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>