force-app/main/default/objects/AH_UDC_ConfigurationSetting__c/fields/SettingValue__c.field-meta.xml
<CustomField>
    <fullName>SettingValue__c</fullName>
    <description>This is the value for the setting.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This is the value for the setting.</inlineHelpText>
    <label>Setting Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>