force-app/main/default/objects/AH_UDC_ConfigurationSetting__c/fields/SettingValueDefault__c.field-meta.xml
<CustomField>
    <fullName>SettingValueDefault__c</fullName>
    <description>This is the default value for the setting.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This is the default value for the setting.</inlineHelpText>
    <label>Setting Value Default</label>
    <length>255</length>
    <type>Text</type>
</CustomField>