force-app/main/default/objects/AH_UDC_ConfigurationSetting__c/fields/SettingValueDomain__c.field-meta.xml
<CustomField>
    <fullName>SettingValueDomain__c</fullName>
    <description>For the setting value, this will constrain entries the valid values that can be entered. Picklist values, min/max for an integer, valid values for a string.  Values in this field must be separated by a \r\n</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Specify the limits/ranges/values allowed in SettingValue__c.

Values are entered one per line with \r\n between them

Integer (Min/Max) [1\r\n10 limits value to a number from 1 to 10 inclusive]

Picklists (dropdown values) [red\r\n\blue\r\nblue]</inlineHelpText>
    <label>Setting Value Domain</label>
    <type>TextArea</type>
</CustomField>