force-app/main/default/objects/AH_UDC_ConfigurationSetting__c/fields/UsedBy__c.field-meta.xml
<CustomField>
    <fullName>UsedBy__c</fullName>
    <description>This is the system which uses the setting. (ex. WorkOrchestrator)</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This is the system which uses the setting. (ex. WorkOrchestrator)</inlineHelpText>
    <label>Used By</label>
    <type>TextArea</type>
</CustomField>