force-app/main/default/objects/AH_UDC_ConfigurationSetting__c/validationRules/UniqueName.validationRule-meta.xml
<ValidationRule>
    <fullName>UniqueName</fullName>
    <active>true</active>
    <errorConditionFormula>AND(VLOOKUP($ObjectType.AH_UDC_ConfigurationSetting__c.Fields.Name, $ObjectType.AH_UDC_ConfigurationSetting__c.Fields.Name, Name) = Name, OR(ISNEW(), ISCHANGED(Name)))</errorConditionFormula>
    <errorMessage>The name of the setting must be unique.</errorMessage>
</ValidationRule>