force-app/main/default/objects/AH_UDC_ConfigurationSetting__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>DisplayOrder__c</columns>
    <columns>PageGroupName__c</columns>
    <columns>PageName__c</columns>
    <columns>PageSectionName__c</columns>
    <columns>SettingDisplayName__c</columns>
    <columns>SettingType__c</columns>
    <columns>SettingHelpText__c</columns>
    <columns>UsedBy__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>