force-app/main/default/objects/AH_UDC_ConfigurationSetting__c/listViews/AllHelp.listView-meta.xml
<ListView>
    <fullName>AllHelp</fullName>
    <columns>NAME</columns>
    <columns>SettingHelpText__c</columns>
    <filterScope>Everything</filterScope>
    <label>All-Help</label>
</ListView>